@@ -1,4 +1,10 @@
 2011-02-16 Niels Grewe <niels.grewe@halbordnung.de>
+	
+	* Source/DKPortNameServer.m
+	* Headers/DKPortNameServer.h:
+	Add stub implementation of a port name server.
+
+2011-02-16 Niels Grewe <niels.grewe@halbordnung.de>
 
 	Add missing files.
 
